stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_check_error_could_not_determine_response_err_type.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "c460d6f0924bd25945c0498a2f0a6b1b874775060366e7b82b53b4cdca8de279",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7ea071af3bc920f974d1f18e845411c73f9ea539e3e97dca825d57dc677db35f",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "1a451e438c44239e4709ec182d2ca35dc14c8b59c42637891df76aadb8dc79d1",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "becea6aebf225a0f3610f3d205779faaeb845dd12019891314a35586d08adcd7",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "dff2cfdce64bdbdd5e4d7a91eb32fc54384a08a984e65e00ff131f4c96628095",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "5af6e2b6d137961849042b75dabd7326ab4691fb529d76c49d6fec6922ff26d4",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "4558bc46e2341c550f18faf885296609a2fc40e51511ae8556550fd851a7d262",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ef4b9b23dac9f87a91e7fed0f11bcf03f1dbfd93e188febe6c06e577f4687a41",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b9d0fb4ba0fcda6c5f37da1b822f54fc6acbbdf31d86e5b967c148e87514be5d",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "d687135f4fa7641b57c5ec5e2bfa3af11fc134746ef3ffdad5fbbcfcfd76dd1f",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "718e9ad8278b76d3006f15c893e122781c7d771adf6456a9002b89ac0d4ec4d0",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(:0:0: attempted to obtain \'err\' value from response, but \'err\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 966,
    ),
  )),
]
