stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_check_error_could_not_determine_response_ok_type.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "c2623bf4736311097222df32db7a038a8d88e0402c522167a348d2087a649f26",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "49d33079d9bb8eb9e9e4c3a45d498cbed7bc70439bb97962ca624bc72b9e87fd",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "23f2076c43d5ca1535e121684441a4e402d36b0f6e80713abb631366ae470b03",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8695a65669aabcd9bdea287c6b65264e680c857b2edcdddf2a176fd5e3469bce",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b15955fde27640790059b114c02925c07386e55b56620cf11d620ad7f0a167c1",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b3d47443070ece790fa4eb09aacbaaae9a4cc782c5125b8727d9fddaf3a4af97",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "71c265dc80e22a27079322c27226a32c86ac9c9a6ed466a4a605b6b4f8367410",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "55c05610acf9f07061eb7e5a18c62e03785ff13dbb9e0e3249c4158dc26979c8",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b0170749bc587b9e33e3d3ebf2b1012bfd84b23537fe8e203271c47d028e757c",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "dba71b4d7896dd9a7d6b7b516a25448481d39af9236f056267abb47f43290c2a",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7b2c3fe12677b6288ce789cd2ecee38aef03d438aeb88e755ff339c76ece83e1",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: could-not-determine-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(:0:0: attempted to obtain \'ok\' value from response, but \'ok\' type is indeterminate) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 7,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 931,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 7,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 931,
    ),
  )),
]
